--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "browser-utils",
-  "version": "0.0.0",
+  "name": "@taybart/corvid",
+  "version": "0.0.1",
   "type": "module",
   "exports": {
     ".": {
