--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@taybart/corvid",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "type": "module",
+  "main": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
