--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "dev": "rslib build --watch"
   },
   "devDependencies": {
+    "@happy-dom/global-registrator": "^17.4.7",
     "@rslib/core": "^0.6.2",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@types/bun": "^1.2.13",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.8.1",
     "typescript": "^5.8.3"
   }
