feat: qr code generator

--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "@taybart/corvid",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "type": "module",
   "main": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./qr": {
+      "types": "./dist/qr.d.ts",
+      "import": "./dist/qr.js"
     }
   },
   "module": "./dist/index.js",
