fix: network auth, add tests, dom.el.query

--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "@taybart/corvid",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "type": "module",
   "main": "./dist/index.js",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
+    },
+    "./dom": {
+      "types": "./dist/dom.d.ts",
+      "import": "./dist/dom.js"
+    },
+    "./network": {
+      "types": "./dist/network.d.ts",
+      "import": "./dist/network.js"
     },
     "./qr": {
       "types": "./dist/qr.d.ts",
